public_html/2015/secret-2e44fac40ce121fc2afdc4cd9bbfe607/2291/source/compile
source.c: In function ‘main’:
source.c:13:8: warning: implicit declaration of function ‘prinf’ [-Wimplicit-function-declaration]
        prinf("%d",i);
        ^
source.c:14:11: error: expected ‘(’ before ‘else’
        if else(B<=500){
           ^
